--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "magento/framework": "*"
   },
   "license": [
-    "Proprietary"
+    "proprietary"
   ],
     "homepage": "https://www.magepal.com/",
     "support": {
