--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,19 @@
 {
-  "name": "magepal/magento2-ajax-newsletter-subscribe",
-  "version": "1.2.1",
-  "description": "Ajax Newsletter Subscription",
-    "keywords": ["magento2 ajax newsletter", "magento 2 ajax subscription", "magento newsletter ajax"],
-  "type": "magento2-module",
-  "require": {
-    "magento/framework": "*"
-  },
-  "license": [
-    "proprietary"
-  ],
+    "name": "magepal/magento2-ajax-newsletter-subscribe",
+    "version": "1.2.1",
+    "description": "Ajax Newsletter Subscription",
+    "keywords": [
+        "magento2 ajax newsletter",
+        "magento 2 ajax subscription",
+        "magento newsletter ajax"
+    ],
+    "type": "magento2-module",
+    "require": {
+        "magento/framework": "*"
+    },
+    "license": [
+        "proprietary"
+    ],
     "homepage": "https://www.magepal.com/",
     "support": {
         "email": "support@magepal.com"
@@ -22,12 +26,12 @@
             "role": "Leader"
         }
     ],
-  "autoload": {
-    "files": [
-      "registration.php"
-    ],
-    "psr-4": {
-      "MagePal\\AjaxNewsletterSubscribe\\": ""
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "MagePal\\AjaxNewsletterSubscribe\\": ""
+        }
     }
-  }
 }
